--- a/MonolithFullStackTemplate/templateAPI/src/main/resources/application.yaml
+++ b/MonolithFullStackTemplate/templateAPI/src/main/resources/application.yaml
@@ -13,7 +13,7 @@ spring:
       path: /h2-console
 
   datasource:
-    url: jdbc:h2:mem:database
+    url: jdbc:h2:mem:db
     driver-class-name: org.h2.Driver
     username: sa
     password:
