fixed user registration error messages

--- a/MonolithFullStackTemplate/templateAPI/src/main/resources/ValidationMessages.properties
+++ b/MonolithFullStackTemplate/templateAPI/src/main/resources/ValidationMessages.properties
@@ -1,1 +1,11 @@
 Users.username.NonUnique=The username provided is already taken
+
+registration.firstName.blank=First name cannot be blank
+registration.firstName.tooLong=First name cannot have more than {max} characters
+registration.lastName.blank=Last name cannot be blank
+registration.lastName.tooLong=Last name cannot have more than {max} characters
+registration.email.blank=Email cannot be blank
+registration.password.null=Password cannot be null
+
+user.email.invalidFormat=Invalid format for email, Eg email@domain.com
+
