Template API - fixed refresh token

--- a/MonolithFullStackTemplate/templateAPI/src/main/resources/ValidationMessages.properties
+++ b/MonolithFullStackTemplate/templateAPI/src/main/resources/ValidationMessages.properties
@@ -1,11 +1,11 @@
 Users.username.NonUnique=The username provided is already taken
 
-registration.firstName.blank=First name cannot be blank
-registration.firstName.tooLong=First name cannot have more than {max} characters
-registration.lastName.blank=Last name cannot be blank
-registration.lastName.tooLong=Last name cannot have more than {max} characters
-registration.email.blank=Email cannot be blank
-registration.password.null=Password cannot be null
-
+user.firstName.blank=First name cannot be blank
+user.firstName.tooLong=First name cannot have more than {max} characters
+user.lastName.blank=Last name cannot be blank
+user.lastName.tooLong=Last name cannot have more than {max} characters
+user.email.blank=Email cannot be blank
 user.email.invalidFormat=Invalid format for email, Eg email@domain.com
+user.password.null=Password cannot be null
+
 
