--- a/MonolithFullStackTemplate/templateUI/package.json
+++ b/MonolithFullStackTemplate/templateUI/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@types/jwt-decode": "^3.1.0",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
