--- a/MonolithFullStackTemplate/templateUI/angular.json
+++ b/MonolithFullStackTemplate/templateUI/angular.json
@@ -33,6 +33,11 @@
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/shared/styles"
+              ]
+            },
             "scripts": []
           },
           "configurations": {
