--- a/MonolithFullStackTemplate/templateAPI/src/main/resources/application.yaml
+++ b/MonolithFullStackTemplate/templateAPI/src/main/resources/application.yaml
@@ -7,6 +7,11 @@ spring:
   application:
     name: template-api
 
+  servlet:
+    multipart:
+      max-file-size: 8MB
+      max-request-size: 8MB
+
   h2:
     console:
       enabled: true
