API - Added user setting api

--- a/MonolithFullStackTemplate/templateAPI/src/main/resources/ValidationMessages.properties
+++ b/MonolithFullStackTemplate/templateAPI/src/main/resources/ValidationMessages.properties
@@ -8,4 +8,8 @@ user.email.blank=Email cannot be blank
 user.email.invalidFormat=Invalid format for email, Eg email@domain.com
 user.password.null=Password cannot be null
 
-
+userSetting.userId.null=User cannot be null
+userSetting.userType.null=User type cannot be null
+userSetting.code.null=User Setting code cannot be null
+userSetting.value.blank=User setting value cannot be blank
+userSetting.value.tooLong=User setting value cannot have more than {max} characters
