--- a/MonolithFullStackTemplate/templateUI/angular.json
+++ b/MonolithFullStackTemplate/templateUI/angular.json
@@ -104,6 +104,24 @@
             ],
             "scripts": []
           }
+        },
+        "storybook": {
+          "builder": "@storybook/angular:start-storybook",
+          "options": {
+            "configDir": ".storybook",
+            "browserTarget": "templateUI:build",
+            "compodoc": false,
+            "port": 6006
+          }
+        },
+        "build-storybook": {
+          "builder": "@storybook/angular:build-storybook",
+          "options": {
+            "configDir": ".storybook",
+            "browserTarget": "templateUI:build",
+            "compodoc": false,
+            "outputDir": "storybook-static"
+          }
         }
       }
     }
