--- a/MonolithFullStackTemplate/templateUI/package.json
+++ b/MonolithFullStackTemplate/templateUI/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "storybook": "ng run templateUI:storybook",
+    "build-storybook": "ng run templateUI:build-storybook"
   },
   "private": true,
   "dependencies": {
@@ -35,6 +37,12 @@
     "@angular-devkit/build-angular": "^16.0.1",
     "@angular/cli": "~16.0.1",
     "@angular/compiler-cli": "^16.0.0",
+    "@storybook/addon-essentials": "^7.6.14",
+    "@storybook/addon-interactions": "^7.6.14",
+    "@storybook/addon-links": "^7.6.14",
+    "@storybook/angular": "^7.6.14",
+    "@storybook/blocks": "^7.6.14",
+    "@storybook/test": "^7.6.14",
     "@types/jasmine": "~4.3.0",
     "@types/lodash": "^4.14.195",
     "jasmine-core": "~4.6.0",
@@ -43,6 +51,9 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.6.14",
     "typescript": "~5.0.2"
   }
 }
