--- a/MonolithFullStackTemplate/templateUI/package.json
+++ b/MonolithFullStackTemplate/templateUI/package.json
@@ -28,6 +28,8 @@
     "hammerjs": "^2.0.8",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "luxon": "^3.5.0",
+    "luxon-angular": "^6.0.0",
     "moment": "^2.29.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -45,6 +47,7 @@
     "@storybook/test": "^7.6.14",
     "@types/jasmine": "~4.3.0",
     "@types/lodash": "^4.14.195",
+    "@types/luxon": "^3.4.2",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
