UI - added android and ios apps

--- a/MonolithFullStackTemplate/templateUI/angular.json
+++ b/MonolithFullStackTemplate/templateUI/angular.json
@@ -46,7 +46,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -125,5 +125,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "a7c307fd-4806-4e70-8ce4-e12a4b65c166"
   }
 }
