--- a/MonolithFullStackTemplate/templateUI/package.json
+++ b/MonolithFullStackTemplate/templateUI/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-browser": "^17.3.11",
     "@angular/platform-browser-dynamic": "^17.3.11",
     "@angular/router": "^17.3.11",
+    "@capacitor/android": "^6.1.2",
+    "@capacitor/angular": "^2.0.3",
+    "@capacitor/core": "^6.1.2",
+    "@capacitor/ios": "^6.1.2",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@types/jwt-decode": "^3.1.0",
@@ -39,6 +43,7 @@
     "@angular-devkit/build-angular": "^17.3.8",
     "@angular/cli": "~17.3.8",
     "@angular/compiler-cli": "^17.3.11",
+    "@capacitor/cli": "^6.1.2",
     "@storybook/addon-essentials": "^7.6.14",
     "@storybook/addon-interactions": "^7.6.14",
     "@storybook/addon-links": "^7.6.14",
