--- a/MonolithFullStackTemplate/templateAPI/.gitignore
+++ b/MonolithFullStackTemplate/templateAPI/.gitignore
@@ -1,4 +1,3 @@
-Reade Me.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -31,3 +30,4 @@ build/
 
 ### VS Code ###
 .vscode/
+/log/*
