--- a/MonolithFullStackTemplate/templateUI/package.json
+++ b/MonolithFullStackTemplate/templateUI/package.json
@@ -45,12 +45,13 @@
     "@angular/cli": "~17.3.8",
     "@angular/compiler-cli": "^17.3.11",
     "@capacitor/cli": "^6.1.2",
-    "@storybook/addon-essentials": "^7.6.14",
-    "@storybook/addon-interactions": "^7.6.14",
-    "@storybook/addon-links": "^7.6.14",
-    "@storybook/angular": "^7.6.14",
-    "@storybook/blocks": "^7.6.14",
-    "@storybook/test": "^7.6.14",
+    "@chromatic-com/storybook": "^3.2.2",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
+    "@storybook/angular": "^8.4.7",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/test": "^8.4.7",
     "@types/jasmine": "~4.3.0",
     "@types/lodash": "^4.14.195",
     "@types/luxon": "^3.4.2",
@@ -62,7 +63,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.6.14",
+    "storybook": "^8.4.7",
     "typescript": "~5.4.5"
   }
 }
